# 11-hackathon

./: .gitignore  README.md
client/: LICENSE  package-lock.json
client/john-ai/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
client/john-ai/src/components/: BusinessList.tsx  PriceComparison.tsx  VoiceAgent.tsx
client/john-ai/src/components/businesses/: BusinessTable.tsx  SearchForm.tsx  SellerTable.tsx
client/john-ai/src/pages/: Index.tsx
client/john-ai/src/types/: dealership.ts
client/john-ai/src/utils/: api.ts  supabase.ts
server/: pyproject.toml
server/baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
server/baml_src/: clients.baml  quote.baml
server/server/: database.py  main.py  models.py
